# xrootd-lcmaps

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README.md  bootstrap  configure  configure.ac
cmake/: FindDl.cmake  FindLcmaps.cmake  FindVoms.cmake  FindXrootd.cmake
configs/: export-symbols  lcmaps-suexec.db  lcmaps.cfg
configs/config.d/: 10-xrootd-lcmaps.cfg  40-xrootd-lcmaps.cfg
rpm/: xrootd-lcmaps.spec
spec/: xrootd-lcmaps.spec
src/: GlobusError.cc  GlobusError.hh  GlobusSupport.cc  GlobusSupport.hh  XrdHttpLcmaps.cc  XrdLcmaps.cc  XrdLcmapsConfig.cc  XrdLcmapsConfig.hh  XrdLcmapsKey.cc  XrdLcmapsKey.hh
